--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
          <main class="right-area">
              <div class="np-link">
                 <i class="fa fa-link" aria-hidden="true"></i>
-                 <span>Link to name printer task </span> 
+                 <span><a href="./_Name Printer/name_printer.html">Link to name printer task</a> </span> 
                  
                     <a href="./_Name Printer/name_printer.html"><button>Name_Printer</button></a>
                  
